crates/analyzer/tests/snapshots/errors__change_sign_and_type_in_cast.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: type mismatch
  ┌─ [snippet]:4:20
  │
4 │   let y: u16 = u16(x)
  │                    ^ expected a numeric type but was `bool`


